@@ -2,6 +2,9 @@ Revision history for Perl module XML::RSS
     
     - Added support for duplicate items of RSS modules.
         - http://rt.cpan.org/Public/Bug/Display.html?id=4495
+    - Added support for multiple Dublin Core elements. One can point
+    the field to an array and it will create multiple elements:
+        - http://rt.cpan.org/Public/Bug/Display.html?id=6000
 
 1.37 - November 18, 2008
     - Extracted the common parts of parse() and parsefile() into one
